Fix: prevent layout shift on button hover

--- a/index.css
+++ b/index.css
@@ -90,7 +90,7 @@ button{
 button:hover{
     background-color:#6943FF;
     color: #FFFFFF;
-    border: 2px solid #B295FF;
+    outline: 2px solid #B295FF;
 }
 
 .conversions-container{
